--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-dev-utils": "^11.0.3",
     "react-dom": "^17.0.2",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-infinite-scroller": "^1.2.4",
     "react-refresh": "^0.8.3",
     "react-router-dom": "^6.0.2",
     "resolve": "1.18.1",
